Testing. Added 'ValidObjectTheory'